--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="mypic" src="file:///Users/macbookpro/Desktop/Web%20Development/HTML%20-%20Personal%20Site/Images/Herschelle1.png"
+      <img class="mypic" src="Images/herschelle1.png"
         alt="Herschelle's-image">
       <h2>Hello.</h2>
       <p class="intro">I'm a BTech first year student of computer science at IIIT Delhi.</p>
