--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h2>Get In Touch</h2>
       <h3>Are you a programmer?</h3>
       <p class="contact-msg">If you also love programming as much as I do then lets code together.</p>
-      <a class="btn" href="herschelle001@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:herschelle001@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
